fixed the close button alignment with the open tabs by changing flexbox property of the parent container

--- a/src/components/Editor/Tabs.css
+++ b/src/components/Editor/Tabs.css
@@ -5,7 +5,7 @@
   flex: 1;
   flex-flow: row wrap;
   -webkit-align-items: stretch;
-  align-items: stretch;
+  align-items: center;
 }
 
 .source-header * {
